@@ -21,5 +21,6 @@ README
 SIGNATURE
 t/Image-Checkerboard/01-use.t
 t/Image-Checkerboard/02-version.t
+t/Image-Checkerboard/03-new.t
 xt/Image-Checkerboard/01-pod_coverage.t
 xt/Image-Checkerboard/02-pod.t
