@@ -3,6 +3,8 @@ abstract: 'Perl class for image checkerboards creating.'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
+  English: 0
+  Error::Pure::Utils: 0.22
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
   Test::NoWarnings: 0
