@@ -28,6 +28,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Image-Checkerboard';
 resources 'homepage' => 'https://github.com/tupinek/Image-Checkerboard';
 resources 'repository' => 'git://github.com/tupinek/Image-Checkerboard';
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0.22;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
